--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "jquery": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
-    "@popperjs/core": "^2.11.2",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@popperjs/core": "^2.11.4",
     "assert": "^2.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
@@ -35,18 +36,18 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.5.3",
+    "mini-css-extract-plugin": "^2.6.0",
     "path": "^0.12.7",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "static-sitemap-cli": "^2.1.1",
+    "static-sitemap-cli": "^2.1.2",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.69.1",
+    "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
