--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
+    "favicons": "^7.0.0-beta.3",
+    "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^5.5.0",
